--- a/semana3/sistema-loja/funcionarios.html
+++ b/semana3/sistema-loja/funcionarios.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="funcionarios.css">
     <title>Funcionários</title>
 </head>
 <body>
-    <div>
-        <p>Eletrônicos PikaChijo</p>
-    </div>
+    <header>
+        <div class="menu">
+            <nav>
+                <a href="index.html">Página Inicial</a>
+                <a href="ctrl-estoque.html">Controle de Estoque</a>
+                <a href="add-produto.html">Adicionar Produto</a>
+                <a href="funcionarios.html">Funcionários</a>
+            </nav>
+        </div>
+        <div class="titulo">
+            <p>Eletrônicos PikaChijo</p>
+        </div>
+    </header>
     
-    <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
-    </div>
-
-    <h2>Funcionários</h2>
+    <div class="conteudo">
+        <h2>Funcionários</h2>
     <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
         <ul>
             <li>Martha Cristiny</li>
@@ -27,5 +32,18 @@
             <li>Liz Claro</li>
             <li>Yara Tacy</li>
         </ul>
+    </div>
+    
+
+    <footer>
+        <div class="rodape">
+            <p>Siga-nos nas redes sociais!</p>
+            <div>
+                <img id="rede-social" src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
+                <img id="rede-social" src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
+                <img id="rede-social" src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
