--- a/semana3/sistema-loja/index.html
+++ b/semana3/sistema-loja/index.html
@@ -4,42 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="index.css">
     <title>Eletrônicos PikaChijo</title>
 </head>
 <body>
-    <div>
-        <h1>Bem-vind@ a <em>Eletrônicos PikaChijo</em>!</h1>
-        <p>Cheia de ofertas eletrizantes</p>
-    </div>
+    <header>
+        <div class="menu">
+            <nav>
+                <a href="index.html">Página Inicial</a>
+                <a href="ctrl-estoque.html">Controle de Estoque</a>
+                <a href="add-produto.html">Adicionar Produto</a>
+                <a href="funcionarios.html">Funcionários</a>
+            </nav>
+        </div>
+        <div class="titulo">
+            <h1>Bem-vind@ a <em>Eletrônicos PikaChijo</em>!</h1>
+            <p><strong>Cheia de ofertas eletrizantes!</strong></p>
+        </div>
+    </header>
 
-    <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
-    </div>
 
-    <div>
-        <h3>Tudo o que você precisa para começar a sua jogatina eletrônica</h3>
-    </div>
-
-    <div>
-        <ul>
-            <li>Videogames</li>
-            <li>TVs</li>
-            <li>Controles</li>
-            <li>Jogos* (Em breve!!)</li>
-        </ul>
-    </div>
-
-    <div>
-        <p>Siga-nos nas redes sociais!</p>
-
+    <div class="conteudo">
         <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+            <h3>Tudo o que você precisa para começar a sua jogatina eletrônica:</h3>
+        </div>
+    
+        <div>
+            <ul>
+                <li>Videogames</li>
+                <li>TVs</li>
+                <li>Controles</li>
+                <li>Jogos</li>
+            </ul>
         </div>
     </div>
+    
+
+    <footer>
+        <div class="rodape">
+            <p>Siga-nos nas redes sociais!</p>
+            <div>
+                <img id="rede-social" src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
+                <img id="rede-social" src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
+                <img id="rede-social" src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+            </div>
+        </div>
+    </footer>  
 </body>
 </html>
