--- a/semana3/bugfixes/home.html
+++ b/semana3/bugfixes/home.html
@@ -14,9 +14,9 @@
     <h2>For Ever 4</h2>
     <div>
         <div class="container" id="container-de-descricao">
-            <p id="identacao-1"> Somos uma empresa focada </p>
-            <p id="identacao-2"> em tornar a compra de </p>
-            <p id="identacao-3"> roupas mais fácil </p>
+            <p> Somos uma empresa focada </p>
+            <p id="identacao-1"> em tornar a compra de </p>
+            <p id="identacao-2"> roupas mais fácil </p>
             <ol>
                 <li> Ache os melhores descontos </li>
                 <li> Busque pelos seus gostos</li>
