--- a/semana3/bugfixes/home.html
+++ b/semana3/bugfixes/home.html
@@ -15,8 +15,8 @@
     <div>
         <div class="container" id="container-de-descricao">
             <p> Somos uma empresa focada </p>
-            <p id="identacao-1"> em tornar a compra de </p>
-            <p id="identacao-2"> roupas mais fácil </p>
+            <p> em tornar a compra de </p>
+            <p> roupas mais fácil </p>
             <ol>
                 <li> Ache os melhores descontos </li>
                 <li> Busque pelos seus gostos</li>
