Concluído botão de projetos, inciado rodapé

--- a/semana3/portifolio/home.html
+++ b/semana3/portifolio/home.html
@@ -10,7 +10,6 @@
 <body>
 
     <header class="cabecalho">
-
         <div class="logo">
             <a href="home.html">Caíque Lima</a>
         </div>
@@ -23,11 +22,9 @@
                 <a href="home.html" id="contato">Contato</a>
             </nav>
         </div>
-
     </header>
 
     <main>
-
         <div class="container">
             <h1>Estudante de desenvolvimento Full-Stack</h1>
             <p>Olá, me chamo Caíque Lima, sou estudante de desenvolvimento na Labenu, turma Lovelace, e este é meu Portfólio.</p>
@@ -50,27 +47,20 @@
         </div>
 
         <div class="container">
-                
+                <a href="home.html"><button id="botão-portfolio">Conheça Meus projetos!</button></a>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </main>
+    <footer class="rodape">
 
+
+
+
+
+
+
+
+
+
+    </footer>
 </body>
 </html>
