--- a/semana3/portifolio/home.html
+++ b/semana3/portifolio/home.html
@@ -51,7 +51,15 @@
         </div>
     </main>
     <footer class="rodape">
+        <div>
+            <p>Me encontre nas redes sociais:</p>
+        </div>
 
+        <div>
+            <a href="https://github.com/CaiqueSLima"> <img src="./img/github.png">GitHub</a>
+            <a href="https://www.linkedin.com/in/ca%C3%ADque-lima-223802a0/"> <img src="./img/linkedin.png">LinkedIn</a>
+            <a href="mailto:caiquesouto@hotmail.com"> <img src="./img/email.png">Email</a>
+        </div>
 
 
 
