--- a/semana3/portifolio/home.html
+++ b/semana3/portifolio/home.html
@@ -17,8 +17,8 @@
         <div class="menu">
             <nav>
                 <u><a href="home.html">Home</a></u>
-                <a href="home.html">Sobre</a>
-                <a href="home.html">Portfólio</a>
+                <a href="sobre.html">Sobre</a>
+                <a href="portfolio.html">Portfólio</a>
                 <a href="home.html" id="contato">Contato</a>
             </nav>
         </div>
@@ -60,15 +60,6 @@
             <a href="https://www.linkedin.com/in/ca%C3%ADque-lima-223802a0/"> <img src="./img/linkedin.png">LinkedIn</a>
             <a href="mailto:caiquesouto@hotmail.com"> <img src="./img/email.png">Email</a>
         </div>
-
-
-
-
-
-
-
-
-
     </footer>
 </body>
 </html>
