--- a/semana3/portifolio/index.html
+++ b/semana3/portifolio/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
     <header class="cabecalho">
         <div class="logo">
-            <a href="home.html">Caíque Lima</a>
+            <a href="index.html">Caíque Lima</a>
         </div>
         
         <div class="menu">
             <nav>
-                <u><a href="home.html">Home</a></u>
+                <u><a href="index.html">Home</a></u>
                 <a href="sobre.html">Sobre</a>
                 <a href="portfolio.html">Portfólio</a>
-                <a href="home.html" id="contato">Contato</a>
+                <a href="contato.html" id="contato">Contato</a>
             </nav>
         </div>
     </header>
@@ -47,7 +47,7 @@
         </div>
 
         <div class="container">
-                <a href="home.html"><button id="botão-portfolio">Conheça Meus projetos!</button></a>
+                <a href="portfolio.html"><button id="botão-portfolio">Conheça Meus projetos!</button></a>
         </div>
     </main>
     <footer class="rodape">
