--- a/semana3/portifolio/sobre.html
+++ b/semana3/portifolio/sobre.html
@@ -11,15 +11,15 @@
 
     <header class="cabecalho">
         <div class="logo">
-            <a href="home.html">Caíque Lima</a>
+            <a href="index.html">Caíque Lima</a>
         </div>
         
         <div class="menu">
             <nav>
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <u><a href="sobre.html">Sobre</a></u>
                 <a href="portfolio.html">Portfólio</a>
-                <a href="home.html" id="contato">Contato</a>
+                <a href="contato.html" id="contato">Contato</a>
             </nav>
         </div>
     </header>
