Iniciado galeria de projetos

--- a/semana3/portifolio/portfolio.html
+++ b/semana3/portifolio/portfolio.html
@@ -29,8 +29,9 @@
             <h1>Meus projetos</h1>
         </div>
 
-        <div>
-
+        <div class="container">
+            <h3> Lojinha virtual</h3>
+            <img 
         </div>
 
 
