Projeto praticamente concluído

--- a/semana3/portfolio/contato.html
+++ b/semana3/portfolio/contato.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Portfólio Caíque Lima</title>
     <meta charset="UTF-8">
@@ -7,13 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="contato.css">
 </head>
-<body>
 
+<body>
     <header class="cabecalho">
         <div class="logo">
             <a href="index.html">Caíque Lima</a>
         </div>
-        
         <div class="menu">
             <nav>
                 <a href="index.html">Home</a>
@@ -23,12 +23,10 @@
             </nav>
         </div>
     </header>
-
     <main>
         <div class="container">
             <h1>Entre em contato comigo!</h1>
         </div>
-
         <div class="container">
             <form action="#">
                 <label for="nome">Nome Completo:</label><br>
@@ -36,23 +34,19 @@
                 <label for="email">Email:</label><br>
                 <input type="email" id="email" name="email" placeholder="Digite aqui seu email" required><br><br>
                 <label for="mensagem">Mensagem:</label><br>
-                <textarea id="mensagem" name="mensagem" rows="10" cols="50" placeholder="Escreva aqui sua mensagem" required></textarea><br>
+                <textarea id="mensagem" name="mensagem" rows="10" cols="50" placeholder="Escreva aqui sua mensagem"
+                    required></textarea><br>
                 <button type="submit">Enviar</button>
             </form>
         </div>
-
         <div class="container">
             <h3>Será um prazer falar com você!</h3>
         </div>
-
-
-        
     </main>
     <footer class="rodape">
         <div>
             <p>Me encontre nas redes sociais:</p>
         </div>
-
         <div>
             <a href="https://github.com/CaiqueSLima"> <img src="./img/github.png">GitHub</a>
             <a href="https://www.linkedin.com/in/ca%C3%ADque-lima-223802a0/"> <img src="./img/linkedin.png">LinkedIn</a>
@@ -60,4 +54,5 @@
         </div>
     </footer>
 </body>
+
 </html>
