--- a/semana3/portfolio/projeto-loja.html
+++ b/semana3/portfolio/projeto-loja.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="projetos.css">
 </head>
 
 <body>
@@ -14,6 +14,7 @@
         <div class="logo">
             <a href="index.html">Caíque Lima</a>
         </div>
+
         <div class="menu">
             <nav>
                 <a href="index.html">Home</a>
@@ -25,15 +26,23 @@
     </header>
     <main>
         <div class="container">
-            <h1>Meus projetos</h1>
+            <h1>Lojinha virtual</h1>
         </div>
         <div class="container">
-            <h3>Lojinha virtual</h3><br>
-            <a href="projeto-loja.html"><img src="./img/Projeto Loja.png"></a>
+            <img src="./img/Projeto Loja.png">
         </div>
-        <div class="container">
-            <h3>Blackjack</h3><br>
-            <a href="projeto-blackjack.html"><img src="./img/blackjack.png"></a>
+        <br>
+        <div class="container-descricao">
+            <p>Esse projeto consiste em estilizar uma lojinha virtual que estava apenas em HTML básico utilizando CSS
+                puro, para me familiarizar com as sintaxes e ir testando algumas possibilidades.</p><br>
+            <p>Link para o GitHub: <a id="link-descricao"
+                    href="https://github.com/future4code/Caique-Lima/tree/master/semana3/sistema-loja">Click Aqui!</a>
+            </p><br>
+            <h3>Tecnologias Utilizadas</h3>
+            <ul>
+                <li>HMTL 5</li>
+                <li>CSS</li>
+            </ul>
         </div>
     </main>
     <footer class="rodape">
