--- a/semana3/portfolio/sobre.html
+++ b/semana3/portfolio/sobre.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Portfólio Caíque Lima</title>
     <meta charset="UTF-8">
@@ -7,13 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="sobre.css">
 </head>
-<body>
 
+<body>
     <header class="cabecalho">
         <div class="logo">
             <a href="index.html">Caíque Lima</a>
         </div>
-        
         <div class="menu">
             <nav>
                 <a href="index.html">Home</a>
@@ -23,12 +23,10 @@
             </nav>
         </div>
     </header>
-
     <main>
         <div class="container">
             <h1>Um pouco sobre minha carreira</h1>
         </div>
-
         <div class="container">
             <h3>Por onde estudei:</h3>
             <ul>
@@ -37,16 +35,19 @@
                 <li>Pontifícia Universidade Católica de Goías (PUC-GO) - Fevereiro 2012 à Julho 2015</li>
             </ul>
         </div>
-
         <div class="container">
             <h3>Habilidades e Características:</h3>
             <ul>
                 <li>Determinado</li>
-                    <p class="texto-descritivo">Quando começo uma coisa, gosto sempre de ir até o final, por mais que dê errado, vou tentado achar alternativas até que eu fique satisfeito.</p>
+                <p class="texto-descritivo">Quando começo uma coisa, gosto sempre de ir até o final, por mais que dê
+                    errado, vou tentado achar alternativas até que eu fique satisfeito.</p>
                 <li>Organizado</li>
-                    <p class="texto-descritivo"> Busco sempre a organização, mesmo que o projeto seja pequeno, para que tudo esteja no seu devido lugar, fazendo com que a manutenção seja mais fácil.</p>
+                <p class="texto-descritivo"> Busco sempre a organização, mesmo que o projeto seja pequeno, para que tudo
+                    esteja no seu devido lugar, fazendo com que a manutenção seja mais fácil.</p>
                 <li>Raciocínio Lógico</li>
-                    <p class="texto-descritivo"> O raciocínio lógico é um dos meus pontos mais fortes. Sempre fui estimulado a pensar de maneira crítica, tentando entender como as coisas funcionam, e isso ajuda bastante na programação.</p>
+                <p class="texto-descritivo"> O raciocínio lógico é um dos meus pontos mais fortes. Sempre fui estimulado
+                    a pensar de maneira crítica, tentando entender como as coisas funcionam, e isso ajuda bastante na
+                    programação.</p>
             </ul>
         </div>
     </main>
@@ -54,7 +55,6 @@
         <div>
             <p>Me encontre nas redes sociais:</p>
         </div>
-
         <div>
             <a href="https://github.com/CaiqueSLima"> <img src="./img/github.png">GitHub</a>
             <a href="https://www.linkedin.com/in/ca%C3%ADque-lima-223802a0/"> <img src="./img/linkedin.png">LinkedIn</a>
@@ -62,4 +62,5 @@
         </div>
     </footer>
 </body>
+
 </html>
